operations/syntactic_analizer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> BLOCK_CODE
Rule 2     BLOCK_CODE -> GV
Rule 3     BLOCK_CODE -> GC
Rule 4     BLOCK_CODE -> GF
Rule 5     BLOCK_CODE -> GCF
Rule 6     BLOCK_CODE -> PRINT
Rule 7     BLOCK_CODE -> EMPTY
Rule 8     C -> GV
Rule 9     C -> GC
Rule 10    C -> GCF
Rule 11    C -> PRINT
Rule 12    C -> EMPTY
Rule 13    GV -> TD V I VA BLOCK_CODE
Rule 14    GV -> TD V BLOCK_CODE
Rule 15    GV -> EMPTY
Rule 16    TD -> INTEGER_TYPE
Rule 17    TD -> BOOLEAN_TYPE
Rule 18    TD -> DECIMAL_TYPE
Rule 19    TD -> STRING_TYPE
Rule 20    V -> VARIABLE
Rule 21    I -> ASSIGNMENT
Rule 22    VA -> NUMBER
Rule 23    VA -> NUMBER DOT NUMBER
Rule 24    VA -> TRUE_VALUE
Rule 25    VA -> FALSE_VALUE
Rule 26    VA -> QUOTATION_MARKS V QUOTATION_MARKS
Rule 27    GC -> CN PA CD PC MY C MN BLOCK_CODE
Rule 28    GC -> CN PA CD PC MY MN BLOCK_CODE
Rule 29    GC -> EMPTY
Rule 30    CN -> IF
Rule 31    CD -> V S V
Rule 32    CD -> V S VA
Rule 33    CD -> VA S V
Rule 34    CD -> VA S VA
Rule 35    S -> EQUAL
Rule 36    S -> GREATER_THAN
Rule 37    S -> LESS_THAN
Rule 38    S -> GREATER_OR_EQUAL
Rule 39    S -> LESS_OR_EQUAL
Rule 40    S -> NOT_EQUAL
Rule 41    GF -> TD V ME PR MA MY C RT MN BLOCK_CODE
Rule 42    GF -> V ME PR MA MY C MN BLOCK_CODE
Rule 43    GF -> TD V ME PR MA MY RT MN BLOCK_CODE
Rule 44    GF -> V ME PR MA MY MN BLOCK_CODE
Rule 45    GF -> TD V ME MA MY C RT MN BLOCK_CODE
Rule 46    GF -> V ME MA MY C MN BLOCK_CODE
Rule 47    GF -> TD V ME MA MY RT MN BLOCK_CODE
Rule 48    GF -> V ME MA MY MN BLOCK_CODE
Rule 49    GF -> EMPTY
Rule 50    PR -> V
Rule 51    ME -> LESS_THAN
Rule 52    MA -> GREATER_THAN
Rule 53    RT -> RETURN V
Rule 54    GCF -> F PA CDF PC MY C MN BLOCK_CODE
Rule 55    GCF -> F PA CDF PC MY MN BLOCK_CODE
Rule 56    GCF -> EMPTY
Rule 57    F -> FOR
Rule 58    CDF -> NUMBER SE NUMBER SE O
Rule 59    SE -> PIPE
Rule 60    O -> SUBTRACTION
Rule 61    O -> ADDITION
Rule 62    PA -> PARENTHESIS_OPEN
Rule 63    PC -> PARENTHESIS_CLOSE
Rule 64    MY -> OPEN_BODY
Rule 65    MN -> LESS_OR_EQUAL
Rule 66    PRINT -> KUNAI MY V MN BLOCK_CODE
Rule 67    PRINT -> KUNAI MY VA MN BLOCK_CODE
Rule 68    PRINT -> KUNAI MY CD MN BLOCK_CODE
Rule 69    PRINT -> EMPTY
Rule 70    EMPTY -> <empty>

Terminals, with rules where they appear

ADDITION             : 61
ASSIGNMENT           : 21
BOOLEAN_TYPE         : 17
DECIMAL_TYPE         : 18
DOT                  : 23
EQUAL                : 35
FALSE_VALUE          : 25
FOR                  : 57
GREATER_OR_EQUAL     : 38
GREATER_THAN         : 36 52
IF                   : 30
INTEGER_TYPE         : 16
KUNAI                : 66 67 68
LESS_OR_EQUAL        : 39 65
LESS_THAN            : 37 51
NOT_EQUAL            : 40
NUMBER               : 22 23 23 58 58
OPEN_BODY            : 64
PARENTHESIS_CLOSE    : 63
PARENTHESIS_OPEN     : 62
PIPE                 : 59
QUOTATION_MARKS      : 26 26
RETURN               : 53
STRING_TYPE          : 19
SUBTRACTION          : 60
TRUE_VALUE           : 24
VARIABLE             : 20
error                : 

Nonterminals, with rules where they appear

BLOCK_CODE           : 1 13 14 27 28 41 42 43 44 45 46 47 48 54 55 66 67 68
C                    : 27 41 42 45 46 54
CD                   : 27 28 68
CDF                  : 54 55
CN                   : 27 28
EMPTY                : 7 12 15 29 49 56 69
F                    : 54 55
GC                   : 3 9
GCF                  : 5 10
GF                   : 4
GV                   : 2 8
I                    : 13
MA                   : 41 42 43 44 45 46 47 48
ME                   : 41 42 43 44 45 46 47 48
MN                   : 27 28 41 42 43 44 45 46 47 48 54 55 66 67 68
MY                   : 27 28 41 42 43 44 45 46 47 48 54 55 66 67 68
O                    : 58
PA                   : 27 28 54 55
PC                   : 27 28 54 55
PR                   : 41 42 43 44
PRINT                : 6 11
PROGRAM              : 0
RT                   : 41 43 45 47
S                    : 31 32 33 34
SE                   : 58 58
TD                   : 13 14 41 43 45 47
V                    : 13 14 26 31 31 32 33 41 42 43 44 45 46 47 48 50 53 66
VA                   : 13 32 33 34 34 67

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . BLOCK_CODE
    (2) BLOCK_CODE -> . GV
    (3) BLOCK_CODE -> . GC
    (4) BLOCK_CODE -> . GF
    (5) BLOCK_CODE -> . GCF
    (6) BLOCK_CODE -> . PRINT
    (7) BLOCK_CODE -> . EMPTY
    (13) GV -> . TD V I VA BLOCK_CODE
    (14) GV -> . TD V BLOCK_CODE
    (15) GV -> . EMPTY
    (27) GC -> . CN PA CD PC MY C MN BLOCK_CODE
    (28) GC -> . CN PA CD PC MY MN BLOCK_CODE
    (29) GC -> . EMPTY
    (41) GF -> . TD V ME PR MA MY C RT MN BLOCK_CODE
    (42) GF -> . V ME PR MA MY C MN BLOCK_CODE
    (43) GF -> . TD V ME PR MA MY RT MN BLOCK_CODE
    (44) GF -> . V ME PR MA MY MN BLOCK_CODE
    (45) GF -> . TD V ME MA MY C RT MN BLOCK_CODE
    (46) GF -> . V ME MA MY C MN BLOCK_CODE
    (47) GF -> . TD V ME MA MY RT MN BLOCK_CODE
    (48) GF -> . V ME MA MY MN BLOCK_CODE
    (49) GF -> . EMPTY
    (54) GCF -> . F PA CDF PC MY C MN BLOCK_CODE
    (55) GCF -> . F PA CDF PC MY MN BLOCK_CODE
    (56) GCF -> . EMPTY
    (66) PRINT -> . KUNAI MY V MN BLOCK_CODE
    (67) PRINT -> . KUNAI MY VA MN BLOCK_CODE
    (68) PRINT -> . KUNAI MY CD MN BLOCK_CODE
    (69) PRINT -> . EMPTY
    (70) EMPTY -> .
    (16) TD -> . INTEGER_TYPE
    (17) TD -> . BOOLEAN_TYPE
    (18) TD -> . DECIMAL_TYPE
    (19) TD -> . STRING_TYPE
    (30) CN -> . IF
    (20) V -> . VARIABLE
    (57) F -> . FOR

    KUNAI           shift and go to state 13
    $end            reduce using rule 70 (EMPTY -> .)
    INTEGER_TYPE    shift and go to state 14
    BOOLEAN_TYPE    shift and go to state 15
    DECIMAL_TYPE    shift and go to state 16
    STRING_TYPE     shift and go to state 17
    IF              shift and go to state 18
    VARIABLE        shift and go to state 19
    FOR             shift and go to state 20

    PROGRAM                        shift and go to state 1
    BLOCK_CODE                     shift and go to state 2
    GV                             shift and go to state 3
    GC                             shift and go to state 4
    GF                             shift and go to state 5
    GCF                            shift and go to state 6
    PRINT                          shift and go to state 7
    EMPTY                          shift and go to state 8
    TD                             shift and go to state 9
    V                              shift and go to state 10
    CN                             shift and go to state 11
    F                              shift and go to state 12

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> BLOCK_CODE .

    $end            reduce using rule 1 (PROGRAM -> BLOCK_CODE .)


state 3

    (2) BLOCK_CODE -> GV .

    $end            reduce using rule 2 (BLOCK_CODE -> GV .)
    LESS_OR_EQUAL   reduce using rule 2 (BLOCK_CODE -> GV .)
    RETURN          reduce using rule 2 (BLOCK_CODE -> GV .)


state 4

    (3) BLOCK_CODE -> GC .

    $end            reduce using rule 3 (BLOCK_CODE -> GC .)
    LESS_OR_EQUAL   reduce using rule 3 (BLOCK_CODE -> GC .)
    RETURN          reduce using rule 3 (BLOCK_CODE -> GC .)


state 5

    (4) BLOCK_CODE -> GF .

    $end            reduce using rule 4 (BLOCK_CODE -> GF .)
    LESS_OR_EQUAL   reduce using rule 4 (BLOCK_CODE -> GF .)
    RETURN          reduce using rule 4 (BLOCK_CODE -> GF .)


state 6

    (5) BLOCK_CODE -> GCF .

    $end            reduce using rule 5 (BLOCK_CODE -> GCF .)
    LESS_OR_EQUAL   reduce using rule 5 (BLOCK_CODE -> GCF .)
    RETURN          reduce using rule 5 (BLOCK_CODE -> GCF .)


state 7

    (6) BLOCK_CODE -> PRINT .

    $end            reduce using rule 6 (BLOCK_CODE -> PRINT .)
    LESS_OR_EQUAL   reduce using rule 6 (BLOCK_CODE -> PRINT .)
    RETURN          reduce using rule 6 (BLOCK_CODE -> PRINT .)


state 8

    (7) BLOCK_CODE -> EMPTY .
    (15) GV -> EMPTY .
    (29) GC -> EMPTY .
    (49) GF -> EMPTY .
    (56) GCF -> EMPTY .
    (69) PRINT -> EMPTY .

  ! reduce/reduce conflict for $end resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for LESS_OR_EQUAL resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for $end resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for LESS_OR_EQUAL resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for $end resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for LESS_OR_EQUAL resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for $end resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for LESS_OR_EQUAL resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for $end resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for LESS_OR_EQUAL resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (BLOCK_CODE -> EMPTY .)
    $end            reduce using rule 7 (BLOCK_CODE -> EMPTY .)
    LESS_OR_EQUAL   reduce using rule 7 (BLOCK_CODE -> EMPTY .)
    RETURN          reduce using rule 7 (BLOCK_CODE -> EMPTY .)

  ! $end            [ reduce using rule 15 (GV -> EMPTY .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 15 (GV -> EMPTY .) ]
  ! RETURN          [ reduce using rule 15 (GV -> EMPTY .) ]
  ! $end            [ reduce using rule 29 (GC -> EMPTY .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 29 (GC -> EMPTY .) ]
  ! RETURN          [ reduce using rule 29 (GC -> EMPTY .) ]
  ! $end            [ reduce using rule 49 (GF -> EMPTY .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 49 (GF -> EMPTY .) ]
  ! RETURN          [ reduce using rule 49 (GF -> EMPTY .) ]
  ! $end            [ reduce using rule 56 (GCF -> EMPTY .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 56 (GCF -> EMPTY .) ]
  ! RETURN          [ reduce using rule 56 (GCF -> EMPTY .) ]
  ! $end            [ reduce using rule 69 (PRINT -> EMPTY .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 69 (PRINT -> EMPTY .) ]
  ! RETURN          [ reduce using rule 69 (PRINT -> EMPTY .) ]


state 9

    (13) GV -> TD . V I VA BLOCK_CODE
    (14) GV -> TD . V BLOCK_CODE
    (41) GF -> TD . V ME PR MA MY C RT MN BLOCK_CODE
    (43) GF -> TD . V ME PR MA MY RT MN BLOCK_CODE
    (45) GF -> TD . V ME MA MY C RT MN BLOCK_CODE
    (47) GF -> TD . V ME MA MY RT MN BLOCK_CODE
    (20) V -> . VARIABLE

    VARIABLE        shift and go to state 19

    V                              shift and go to state 21

state 10

    (42) GF -> V . ME PR MA MY C MN BLOCK_CODE
    (44) GF -> V . ME PR MA MY MN BLOCK_CODE
    (46) GF -> V . ME MA MY C MN BLOCK_CODE
    (48) GF -> V . ME MA MY MN BLOCK_CODE
    (51) ME -> . LESS_THAN

    LESS_THAN       shift and go to state 23

    ME                             shift and go to state 22

state 11

    (27) GC -> CN . PA CD PC MY C MN BLOCK_CODE
    (28) GC -> CN . PA CD PC MY MN BLOCK_CODE
    (62) PA -> . PARENTHESIS_OPEN

    PARENTHESIS_OPEN shift and go to state 25

    PA                             shift and go to state 24

state 12

    (54) GCF -> F . PA CDF PC MY C MN BLOCK_CODE
    (55) GCF -> F . PA CDF PC MY MN BLOCK_CODE
    (62) PA -> . PARENTHESIS_OPEN

    PARENTHESIS_OPEN shift and go to state 25

    PA                             shift and go to state 26

state 13

    (66) PRINT -> KUNAI . MY V MN BLOCK_CODE
    (67) PRINT -> KUNAI . MY VA MN BLOCK_CODE
    (68) PRINT -> KUNAI . MY CD MN BLOCK_CODE
    (64) MY -> . OPEN_BODY

    OPEN_BODY       shift and go to state 28

    MY                             shift and go to state 27

state 14

    (16) TD -> INTEGER_TYPE .

    VARIABLE        reduce using rule 16 (TD -> INTEGER_TYPE .)


state 15

    (17) TD -> BOOLEAN_TYPE .

    VARIABLE        reduce using rule 17 (TD -> BOOLEAN_TYPE .)


state 16

    (18) TD -> DECIMAL_TYPE .

    VARIABLE        reduce using rule 18 (TD -> DECIMAL_TYPE .)


state 17

    (19) TD -> STRING_TYPE .

    VARIABLE        reduce using rule 19 (TD -> STRING_TYPE .)


state 18

    (30) CN -> IF .

    PARENTHESIS_OPEN reduce using rule 30 (CN -> IF .)


state 19

    (20) V -> VARIABLE .

    LESS_THAN       reduce using rule 20 (V -> VARIABLE .)
    ASSIGNMENT      reduce using rule 20 (V -> VARIABLE .)
    KUNAI           reduce using rule 20 (V -> VARIABLE .)
    INTEGER_TYPE    reduce using rule 20 (V -> VARIABLE .)
    BOOLEAN_TYPE    reduce using rule 20 (V -> VARIABLE .)
    DECIMAL_TYPE    reduce using rule 20 (V -> VARIABLE .)
    STRING_TYPE     reduce using rule 20 (V -> VARIABLE .)
    IF              reduce using rule 20 (V -> VARIABLE .)
    VARIABLE        reduce using rule 20 (V -> VARIABLE .)
    FOR             reduce using rule 20 (V -> VARIABLE .)
    $end            reduce using rule 20 (V -> VARIABLE .)
    LESS_OR_EQUAL   reduce using rule 20 (V -> VARIABLE .)
    RETURN          reduce using rule 20 (V -> VARIABLE .)
    GREATER_THAN    reduce using rule 20 (V -> VARIABLE .)
    EQUAL           reduce using rule 20 (V -> VARIABLE .)
    GREATER_OR_EQUAL reduce using rule 20 (V -> VARIABLE .)
    NOT_EQUAL       reduce using rule 20 (V -> VARIABLE .)
    QUOTATION_MARKS reduce using rule 20 (V -> VARIABLE .)
    PARENTHESIS_CLOSE reduce using rule 20 (V -> VARIABLE .)


state 20

    (57) F -> FOR .

    PARENTHESIS_OPEN reduce using rule 57 (F -> FOR .)


state 21

    (13) GV -> TD V . I VA BLOCK_CODE
    (14) GV -> TD V . BLOCK_CODE
    (41) GF -> TD V . ME PR MA MY C RT MN BLOCK_CODE
    (43) GF -> TD V . ME PR MA MY RT MN BLOCK_CODE
    (45) GF -> TD V . ME MA MY C RT MN BLOCK_CODE
    (47) GF -> TD V . ME MA MY RT MN BLOCK_CODE
    (21) I -> . ASSIGNMENT
    (2) BLOCK_CODE -> . GV
    (3) BLOCK_CODE -> . GC
    (4) BLOCK_CODE -> . GF
    (5) BLOCK_CODE -> . GCF
    (6) BLOCK_CODE -> . PRINT
    (7) BLOCK_CODE -> . EMPTY
    (51) ME -> . LESS_THAN
    (13) GV -> . TD V I VA BLOCK_CODE
    (14) GV -> . TD V BLOCK_CODE
    (15) GV -> . EMPTY
    (27) GC -> . CN PA CD PC MY C MN BLOCK_CODE
    (28) GC -> . CN PA CD PC MY MN BLOCK_CODE
    (29) GC -> . EMPTY
    (41) GF -> . TD V ME PR MA MY C RT MN BLOCK_CODE
    (42) GF -> . V ME PR MA MY C MN BLOCK_CODE
    (43) GF -> . TD V ME PR MA MY RT MN BLOCK_CODE
    (44) GF -> . V ME PR MA MY MN BLOCK_CODE
    (45) GF -> . TD V ME MA MY C RT MN BLOCK_CODE
    (46) GF -> . V ME MA MY C MN BLOCK_CODE
    (47) GF -> . TD V ME MA MY RT MN BLOCK_CODE
    (48) GF -> . V ME MA MY MN BLOCK_CODE
    (49) GF -> . EMPTY
    (54) GCF -> . F PA CDF PC MY C MN BLOCK_CODE
    (55) GCF -> . F PA CDF PC MY MN BLOCK_CODE
    (56) GCF -> . EMPTY
    (66) PRINT -> . KUNAI MY V MN BLOCK_CODE
    (67) PRINT -> . KUNAI MY VA MN BLOCK_CODE
    (68) PRINT -> . KUNAI MY CD MN BLOCK_CODE
    (69) PRINT -> . EMPTY
    (70) EMPTY -> .
    (16) TD -> . INTEGER_TYPE
    (17) TD -> . BOOLEAN_TYPE
    (18) TD -> . DECIMAL_TYPE
    (19) TD -> . STRING_TYPE
    (30) CN -> . IF
    (20) V -> . VARIABLE
    (57) F -> . FOR

    ASSIGNMENT      shift and go to state 32
    LESS_THAN       shift and go to state 23
    KUNAI           shift and go to state 13
    $end            reduce using rule 70 (EMPTY -> .)
    LESS_OR_EQUAL   reduce using rule 70 (EMPTY -> .)
    RETURN          reduce using rule 70 (EMPTY -> .)
    INTEGER_TYPE    shift and go to state 14
    BOOLEAN_TYPE    shift and go to state 15
    DECIMAL_TYPE    shift and go to state 16
    STRING_TYPE     shift and go to state 17
    IF              shift and go to state 18
    VARIABLE        shift and go to state 19
    FOR             shift and go to state 20

    TD                             shift and go to state 9
    V                              shift and go to state 10
    I                              shift and go to state 29
    BLOCK_CODE                     shift and go to state 30
    ME                             shift and go to state 31
    GV                             shift and go to state 3
    GC                             shift and go to state 4
    GF                             shift and go to state 5
    GCF                            shift and go to state 6
    PRINT                          shift and go to state 7
    EMPTY                          shift and go to state 8
    CN                             shift and go to state 11
    F                              shift and go to state 12

state 22

    (42) GF -> V ME . PR MA MY C MN BLOCK_CODE
    (44) GF -> V ME . PR MA MY MN BLOCK_CODE
    (46) GF -> V ME . MA MY C MN BLOCK_CODE
    (48) GF -> V ME . MA MY MN BLOCK_CODE
    (50) PR -> . V
    (52) MA -> . GREATER_THAN
    (20) V -> . VARIABLE

    GREATER_THAN    shift and go to state 36
    VARIABLE        shift and go to state 19

    V                              shift and go to state 33
    PR                             shift and go to state 34
    MA                             shift and go to state 35

state 23

    (51) ME -> LESS_THAN .

    GREATER_THAN    reduce using rule 51 (ME -> LESS_THAN .)
    VARIABLE        reduce using rule 51 (ME -> LESS_THAN .)


state 24

    (27) GC -> CN PA . CD PC MY C MN BLOCK_CODE
    (28) GC -> CN PA . CD PC MY MN BLOCK_CODE
    (31) CD -> . V S V
    (32) CD -> . V S VA
    (33) CD -> . VA S V
    (34) CD -> . VA S VA
    (20) V -> . VARIABLE
    (22) VA -> . NUMBER
    (23) VA -> . NUMBER DOT NUMBER
    (24) VA -> . TRUE_VALUE
    (25) VA -> . FALSE_VALUE
    (26) VA -> . QUOTATION_MARKS V QUOTATION_MARKS

    VARIABLE        shift and go to state 19
    NUMBER          shift and go to state 40
    TRUE_VALUE      shift and go to state 41
    FALSE_VALUE     shift and go to state 42
    QUOTATION_MARKS shift and go to state 43

    CD                             shift and go to state 37
    V                              shift and go to state 38
    VA                             shift and go to state 39

state 25

    (62) PA -> PARENTHESIS_OPEN .

    VARIABLE        reduce using rule 62 (PA -> PARENTHESIS_OPEN .)
    NUMBER          reduce using rule 62 (PA -> PARENTHESIS_OPEN .)
    TRUE_VALUE      reduce using rule 62 (PA -> PARENTHESIS_OPEN .)
    FALSE_VALUE     reduce using rule 62 (PA -> PARENTHESIS_OPEN .)
    QUOTATION_MARKS reduce using rule 62 (PA -> PARENTHESIS_OPEN .)


state 26

    (54) GCF -> F PA . CDF PC MY C MN BLOCK_CODE
    (55) GCF -> F PA . CDF PC MY MN BLOCK_CODE
    (58) CDF -> . NUMBER SE NUMBER SE O

    NUMBER          shift and go to state 45

    CDF                            shift and go to state 44

state 27

    (66) PRINT -> KUNAI MY . V MN BLOCK_CODE
    (67) PRINT -> KUNAI MY . VA MN BLOCK_CODE
    (68) PRINT -> KUNAI MY . CD MN BLOCK_CODE
    (20) V -> . VARIABLE
    (22) VA -> . NUMBER
    (23) VA -> . NUMBER DOT NUMBER
    (24) VA -> . TRUE_VALUE
    (25) VA -> . FALSE_VALUE
    (26) VA -> . QUOTATION_MARKS V QUOTATION_MARKS
    (31) CD -> . V S V
    (32) CD -> . V S VA
    (33) CD -> . VA S V
    (34) CD -> . VA S VA

    VARIABLE        shift and go to state 19
    NUMBER          shift and go to state 40
    TRUE_VALUE      shift and go to state 41
    FALSE_VALUE     shift and go to state 42
    QUOTATION_MARKS shift and go to state 43

    V                              shift and go to state 46
    VA                             shift and go to state 47
    CD                             shift and go to state 48

state 28

    (64) MY -> OPEN_BODY .

    VARIABLE        reduce using rule 64 (MY -> OPEN_BODY .)
    NUMBER          reduce using rule 64 (MY -> OPEN_BODY .)
    TRUE_VALUE      reduce using rule 64 (MY -> OPEN_BODY .)
    FALSE_VALUE     reduce using rule 64 (MY -> OPEN_BODY .)
    QUOTATION_MARKS reduce using rule 64 (MY -> OPEN_BODY .)
    LESS_OR_EQUAL   reduce using rule 64 (MY -> OPEN_BODY .)
    KUNAI           reduce using rule 64 (MY -> OPEN_BODY .)
    INTEGER_TYPE    reduce using rule 64 (MY -> OPEN_BODY .)
    BOOLEAN_TYPE    reduce using rule 64 (MY -> OPEN_BODY .)
    DECIMAL_TYPE    reduce using rule 64 (MY -> OPEN_BODY .)
    STRING_TYPE     reduce using rule 64 (MY -> OPEN_BODY .)
    IF              reduce using rule 64 (MY -> OPEN_BODY .)
    FOR             reduce using rule 64 (MY -> OPEN_BODY .)
    RETURN          reduce using rule 64 (MY -> OPEN_BODY .)


state 29

    (13) GV -> TD V I . VA BLOCK_CODE
    (22) VA -> . NUMBER
    (23) VA -> . NUMBER DOT NUMBER
    (24) VA -> . TRUE_VALUE
    (25) VA -> . FALSE_VALUE
    (26) VA -> . QUOTATION_MARKS V QUOTATION_MARKS

    NUMBER          shift and go to state 40
    TRUE_VALUE      shift and go to state 41
    FALSE_VALUE     shift and go to state 42
    QUOTATION_MARKS shift and go to state 43

    VA                             shift and go to state 49

state 30

    (14) GV -> TD V BLOCK_CODE .

    $end            reduce using rule 14 (GV -> TD V BLOCK_CODE .)
    LESS_OR_EQUAL   reduce using rule 14 (GV -> TD V BLOCK_CODE .)
    RETURN          reduce using rule 14 (GV -> TD V BLOCK_CODE .)


state 31

    (41) GF -> TD V ME . PR MA MY C RT MN BLOCK_CODE
    (43) GF -> TD V ME . PR MA MY RT MN BLOCK_CODE
    (45) GF -> TD V ME . MA MY C RT MN BLOCK_CODE
    (47) GF -> TD V ME . MA MY RT MN BLOCK_CODE
    (50) PR -> . V
    (52) MA -> . GREATER_THAN
    (20) V -> . VARIABLE

    GREATER_THAN    shift and go to state 36
    VARIABLE        shift and go to state 19

    V                              shift and go to state 33
    PR                             shift and go to state 50
    MA                             shift and go to state 51

state 32

    (21) I -> ASSIGNMENT .

    NUMBER          reduce using rule 21 (I -> ASSIGNMENT .)
    TRUE_VALUE      reduce using rule 21 (I -> ASSIGNMENT .)
    FALSE_VALUE     reduce using rule 21 (I -> ASSIGNMENT .)
    QUOTATION_MARKS reduce using rule 21 (I -> ASSIGNMENT .)


state 33

    (50) PR -> V .

    GREATER_THAN    reduce using rule 50 (PR -> V .)


state 34

    (42) GF -> V ME PR . MA MY C MN BLOCK_CODE
    (44) GF -> V ME PR . MA MY MN BLOCK_CODE
    (52) MA -> . GREATER_THAN

    GREATER_THAN    shift and go to state 36

    MA                             shift and go to state 52

state 35

    (46) GF -> V ME MA . MY C MN BLOCK_CODE
    (48) GF -> V ME MA . MY MN BLOCK_CODE
    (64) MY -> . OPEN_BODY

    OPEN_BODY       shift and go to state 28

    MY                             shift and go to state 53

state 36

    (52) MA -> GREATER_THAN .

    OPEN_BODY       reduce using rule 52 (MA -> GREATER_THAN .)


state 37

    (27) GC -> CN PA CD . PC MY C MN BLOCK_CODE
    (28) GC -> CN PA CD . PC MY MN BLOCK_CODE
    (63) PC -> . PARENTHESIS_CLOSE

    PARENTHESIS_CLOSE shift and go to state 55

    PC                             shift and go to state 54

state 38

    (31) CD -> V . S V
    (32) CD -> V . S VA
    (35) S -> . EQUAL
    (36) S -> . GREATER_THAN
    (37) S -> . LESS_THAN
    (38) S -> . GREATER_OR_EQUAL
    (39) S -> . LESS_OR_EQUAL
    (40) S -> . NOT_EQUAL

    EQUAL           shift and go to state 57
    GREATER_THAN    shift and go to state 58
    LESS_THAN       shift and go to state 59
    GREATER_OR_EQUAL shift and go to state 60
    LESS_OR_EQUAL   shift and go to state 61
    NOT_EQUAL       shift and go to state 62

    S                              shift and go to state 56

state 39

    (33) CD -> VA . S V
    (34) CD -> VA . S VA
    (35) S -> . EQUAL
    (36) S -> . GREATER_THAN
    (37) S -> . LESS_THAN
    (38) S -> . GREATER_OR_EQUAL
    (39) S -> . LESS_OR_EQUAL
    (40) S -> . NOT_EQUAL

    EQUAL           shift and go to state 57
    GREATER_THAN    shift and go to state 58
    LESS_THAN       shift and go to state 59
    GREATER_OR_EQUAL shift and go to state 60
    LESS_OR_EQUAL   shift and go to state 61
    NOT_EQUAL       shift and go to state 62

    S                              shift and go to state 63

state 40

    (22) VA -> NUMBER .
    (23) VA -> NUMBER . DOT NUMBER

    EQUAL           reduce using rule 22 (VA -> NUMBER .)
    GREATER_THAN    reduce using rule 22 (VA -> NUMBER .)
    LESS_THAN       reduce using rule 22 (VA -> NUMBER .)
    GREATER_OR_EQUAL reduce using rule 22 (VA -> NUMBER .)
    LESS_OR_EQUAL   reduce using rule 22 (VA -> NUMBER .)
    NOT_EQUAL       reduce using rule 22 (VA -> NUMBER .)
    KUNAI           reduce using rule 22 (VA -> NUMBER .)
    INTEGER_TYPE    reduce using rule 22 (VA -> NUMBER .)
    BOOLEAN_TYPE    reduce using rule 22 (VA -> NUMBER .)
    DECIMAL_TYPE    reduce using rule 22 (VA -> NUMBER .)
    STRING_TYPE     reduce using rule 22 (VA -> NUMBER .)
    IF              reduce using rule 22 (VA -> NUMBER .)
    VARIABLE        reduce using rule 22 (VA -> NUMBER .)
    FOR             reduce using rule 22 (VA -> NUMBER .)
    $end            reduce using rule 22 (VA -> NUMBER .)
    RETURN          reduce using rule 22 (VA -> NUMBER .)
    PARENTHESIS_CLOSE reduce using rule 22 (VA -> NUMBER .)
    DOT             shift and go to state 64


state 41

    (24) VA -> TRUE_VALUE .

    EQUAL           reduce using rule 24 (VA -> TRUE_VALUE .)
    GREATER_THAN    reduce using rule 24 (VA -> TRUE_VALUE .)
    LESS_THAN       reduce using rule 24 (VA -> TRUE_VALUE .)
    GREATER_OR_EQUAL reduce using rule 24 (VA -> TRUE_VALUE .)
    LESS_OR_EQUAL   reduce using rule 24 (VA -> TRUE_VALUE .)
    NOT_EQUAL       reduce using rule 24 (VA -> TRUE_VALUE .)
    KUNAI           reduce using rule 24 (VA -> TRUE_VALUE .)
    INTEGER_TYPE    reduce using rule 24 (VA -> TRUE_VALUE .)
    BOOLEAN_TYPE    reduce using rule 24 (VA -> TRUE_VALUE .)
    DECIMAL_TYPE    reduce using rule 24 (VA -> TRUE_VALUE .)
    STRING_TYPE     reduce using rule 24 (VA -> TRUE_VALUE .)
    IF              reduce using rule 24 (VA -> TRUE_VALUE .)
    VARIABLE        reduce using rule 24 (VA -> TRUE_VALUE .)
    FOR             reduce using rule 24 (VA -> TRUE_VALUE .)
    $end            reduce using rule 24 (VA -> TRUE_VALUE .)
    RETURN          reduce using rule 24 (VA -> TRUE_VALUE .)
    PARENTHESIS_CLOSE reduce using rule 24 (VA -> TRUE_VALUE .)


state 42

    (25) VA -> FALSE_VALUE .

    EQUAL           reduce using rule 25 (VA -> FALSE_VALUE .)
    GREATER_THAN    reduce using rule 25 (VA -> FALSE_VALUE .)
    LESS_THAN       reduce using rule 25 (VA -> FALSE_VALUE .)
    GREATER_OR_EQUAL reduce using rule 25 (VA -> FALSE_VALUE .)
    LESS_OR_EQUAL   reduce using rule 25 (VA -> FALSE_VALUE .)
    NOT_EQUAL       reduce using rule 25 (VA -> FALSE_VALUE .)
    KUNAI           reduce using rule 25 (VA -> FALSE_VALUE .)
    INTEGER_TYPE    reduce using rule 25 (VA -> FALSE_VALUE .)
    BOOLEAN_TYPE    reduce using rule 25 (VA -> FALSE_VALUE .)
    DECIMAL_TYPE    reduce using rule 25 (VA -> FALSE_VALUE .)
    STRING_TYPE     reduce using rule 25 (VA -> FALSE_VALUE .)
    IF              reduce using rule 25 (VA -> FALSE_VALUE .)
    VARIABLE        reduce using rule 25 (VA -> FALSE_VALUE .)
    FOR             reduce using rule 25 (VA -> FALSE_VALUE .)
    $end            reduce using rule 25 (VA -> FALSE_VALUE .)
    RETURN          reduce using rule 25 (VA -> FALSE_VALUE .)
    PARENTHESIS_CLOSE reduce using rule 25 (VA -> FALSE_VALUE .)


state 43
